@@ -11,6 +11,8 @@ dpkg (1.17.19) UNRELEASED; urgency=low
   * Mention --pid and --ppid in start-stop-daemon(8) man page DESCRIPTION.
   * Add invoke hooks for dpkg --add-architecture and --remove-architecture.
     Prompted by Helmut Grohne <helmut@subdivi.de>.
+  * Reverse --verify-format logic to actually accept 'rpm' as valid.
+    Closes: #765907
 
   [ Updated programs translations ]
   * Italian (Milo Casagrande): Closes: #765748
